# 要连接到构建目标的源文件；
TARGET_SOURCES(
    ${PROJECT_NAME}
    PRIVATE
    #Begin target source
    ${CMAKE_CURRENT_LIST_DIR}/Delay/delay.c
    #${CMAKE_CURRENT_LIST_DIR}/GUI/GUI_Paint.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font8.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font8.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font12.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font16.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font20.c
    #${CMAKE_CURRENT_LIST_DIR}/Fonts/font24.c
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8/AnoPTv8Cmd.c
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8/AnoPTv8FrameFactory.c
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8/AnoPTv8Par.c
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8/AnoPTv8Run.c
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8/HWInterface.c
    ${CMAKE_CURRENT_LIST_DIR}/Math/math_fun.c
    ${CMAKE_CURRENT_LIST_DIR}/MPU_DMP/inv_mpu_dmp_motion_driver.c
    ${CMAKE_CURRENT_LIST_DIR}/MPU_DMP/inv_mpu.c
    #
    #end target sorurce 
)

# 将模块头文件路径添加到目标；
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
    PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR}/Delay
    #${CMAKE_CURRENT_LIST_DIR}/GUI
    #${CMAKE_CURRENT_LIST_DIR}/Fonts
    ${CMAKE_CURRENT_LIST_DIR}/AnoPTv8
    ${CMAKE_CURRENT_LIST_DIR}/Math
    ${CMAKE_CURRENT_LIST_DIR}/MPU_DMP
)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/U8G2 ${LIBRARY_OUTPUT_PATH}/U8G2)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/FreeRTOS ${LIBRARY_OUTPUT_PATH}/FreeRTOS)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  freertos_kernel)