# 要连接到构建目标的源文件；
TARGET_SOURCES(
    ${PROJECT_NAME}
    PRIVATE
    #Begin target source
    ${CMAKE_CURRENT_LIST_DIR}/Delay/delay.c 
    #end target sorurce 
)

# 将模块头文件路径添加到目标；
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} 
    PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR}/Delay
)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/U8G2 ${LIBRARY_OUTPUT_PATH}/U8G2)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/FreeRTOS ${LIBRARY_OUTPUT_PATH}/FreeRTOS)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}  freertos_kernel)